--- a/Bradley Craig resume/Experience.html
+++ b/Bradley Craig resume/Experience.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>List of Qualifying Experiences</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
